tracing/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: jaeger
  namespace: tracing
spec:
  rules:
  - host: bootcamp-tracing.ch.innoq.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jaeger-query
          servicePort: 80
